Tue May 15 11:31:48 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2.10.

Thu May 10 09:23:02 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: "checking ruby/io.h" -> "checking for ruby/io.h".

Wed May 09 03:23:44 GMT 2012  Olly Betts <olly@survex.com>

	* python/testsuite2.py: Explicitly suggest "make check VERBOSE=1" as a
	  simple way to rerun tests with verbose output.

Wed May 09 03:22:43 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Wrap Xapian::DBCHECK_FIX properly so we don't get
	  xapian.cvar in Python.

Sun Apr 22 13:04:47 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am: Sort both the lists of expected
	  and of found SWIG-generated sources with Perl, to avoid problems with
	  locale-specific sort orders.

Sun Apr 22 11:00:21 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/writabledatabase.t: Forward port additional test coverage
	  for Database::close() from Search::Xapian in 1.2 branch.

Mon Apr 16 23:02:18 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Make sure the ruby subdirectory exists before
	  trying to create ruby/rubyio.h, so this works in a VPATH
	  build from a clean tree.

Mon Apr 16 06:47:58 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/AssemblyInfo.cs.in,csharp/Makefile.am: Use -keyfile and
	  -keycontainer options to the C# compiler, because it warns us
	  to do this instead of setting them in AssemblyInfo.cs.

Mon Apr 16 06:39:25 GMT 2012  Olly Betts <olly@survex.com>

	* java/Makefile.am: Remove now superfluous old check that SWIG
	  generated at least the sources we wanted - we now check it generated
	  *exactly* the sources we wanted.

Mon Apr 16 06:34:30 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am: Use diff's -c option when
	  comparing the files SWIG generated against those we were expecting to
	  get as the output should be easier to understand.
